# contextforge-plugins-framework

./: .coveragerc  .env.example  .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yaml
cpex/: __init__.py
cpex/framework/: __init__.py  base.py  constants.py  decorator.py  errors.py  manager.py  memory.py  models.py  observability.py  protocols.py  registry.py  session.py  settings.py  utils.py  validators.py
cpex/framework/cmf/: message.py  view.py
cpex/framework/extensions/: __init__.py  agent.py  constants.py  delegation.py  extensions.py  meta.py  tiers.py
cpex/framework/hooks/: __init__.py  agents.py  http.py  identity.py  message.py  policies.py  prompts.py  registry.py  resources.py  tools.py
cpex/framework/isolated/: client.py  venv_comm.py  worker.py
cpex/framework/loader/: __init__.py  config.py  plugin.py
cpex/tools/: __init__.py  catalog.py  cli.py  models.py  plugin_registry.py
crates/cpex-core/: Cargo.toml
crates/cpex-core/examples/: cmf_capabilities_demo.rs  cmf_capabilities_demo.yaml  plugin_demo.rs
crates/cpex-core/src/: config.rs  context.rs  error.rs  executor.rs  factory.rs  (+4 more)
crates/cpex-ffi/: Cargo.toml
docs/: apl-dsl-spec.md  cmf-message-spec-v2.md  hugo.toml  plugin-framework-spec-v2.md  unified-config-proposal.md
docs/content/: _index.md
docs/design/: overview.md
docs/proposals/: cpex-golang-bindings-proposal.md
docs/specs/: apl-dsl-spec.md  cmf-message-spec.md  cpex-go-spec.md  plugin-framework-spec.md  unified-config-proposal.md
go/cpex/: README.md  cmf.go  ffi.go  manager.go  manager_test.go  types.go
scripts/: update_headers.py
tests/: pytest.ini
tests/unit/: __init__.py
(+89 files in other folders)
