[project]
name = "cpex"
version = "0.1.0"
description = "Cpex - ContextForge Plugin Extensibility framework"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license-files = ["LICENSE*"]
readme = "README.md"
authors = [
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
    { name = "Mihai Criveti", email = "redacted@ibm.com"},
    { name = "Teryl Taylor", email = "terylt@ibm.com" },
]
maintainers = [
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
    { name = "Teryl Taylor", email = "terylt@ibm.com" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "jinja2>=3.1.6",
    "mcp>=1.18.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

docs = [
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocs-click",
    "mkdocstrings[python]",
    "griffe_inherited_docstrings",
    "griffe-pydantic",
    "mkdocs-awesome-nav",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-enumerate-headings-plugin"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cpex"]
